# ChangeLog for dev-python/networkx
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/networkx/ChangeLog,v 1.2 2009/08/19 05:09:38 bicatali Exp $

  19 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> networkx-0.99.ebuild:
  Added dependendcies for the examples, closing bug #276075

*networkx-0.99 (28 Feb 2009)

  28 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/networkx-0.99-setup.py.patch, +metadata.xml, +networkx-0.99.ebuild:
  Initial import, see bug #120794. Thanks ibm, Marek and Tim Cera for their
  contributions
