@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX networkx-0.99-setup.py.patch 1604 RMD160 06123b650e1730afffbb3b0e8ecfc7c4bd603e13 SHA1 8ad5386d6fe6e592fc8e95be2c7a16a91ee16767 SHA256 b657875355632e4b7df9300ad24d8f93b89103935f6f97f793305a0d001ddb68
 DIST networkx-0.99.tar.gz 533877 RMD160 4450a016e1841fed525598f017a4dfae3d099b5d SHA1 8d1f1da45ac20302d73853e14da9c24cada81a8d SHA256 8b65557c6048a2bc4d5fb0fe539139d3656d9c86367c89297ad40e12e90766ad
+DIST networkx-1.0.1.tar.gz 525088 RMD160 7c40d836d821188be84ee5c62c5b0f9357032337 SHA1 de90076fee23b9d7d1ab03c47871f49a35aefd13 SHA256 c8a62cbb530215de7b8ce81f81cf8de7626b348f10a7828f37b4674e810c42ae
 EBUILD networkx-0.99.ebuild 859 RMD160 bb9bd71435923434ebc2c3956c02609def5f5996 SHA1 94b0d2a6bf40612303ae6fa50e0737b8b2a3ad17 SHA256 9f6747e6691f20cf2923f1157b8cf817550fbd79d153cf7d2ce4d89b11d8b218
-MISC ChangeLog 606 RMD160 0aa364b57dde8dd8004eb97c9e457da3bafad054 SHA1 5cedbb4c3aacb6fb74a17e89d820e110ed31da0c SHA256 dcbe1f48859144f4f185044e150dc332a07833ba0221bd94ff5b71d4ee089eb0
+EBUILD networkx-1.0.1.ebuild 801 RMD160 77c080e130aebb12369a7a8262ab7add49b8a415 SHA1 d471bc298b630dc2f976b368360968ddb8cdcc3f SHA256 7af8622ef304e260525ac2706de3aad97b6c9566b71b493fc425f45e33358405
+MISC ChangeLog 734 RMD160 b0f49ec531abd45c7a8295acce213ced66c909d0 SHA1 7c7c90cb6686551be0a6f783683333fa86b04f8f SHA256 c366585a279eb238e796e66dcc1298cdca4225a64fe7ce830543d689c54e5b8c
 MISC metadata.xml 841 RMD160 dae70ba81f3e473999ba6264dc2e0fc912c356a4 SHA1 72b8ec644ce7451c62afff557a16407907075073 SHA256 fe860e662a39de346362597cad729255eb99cabae42f122b308a6e62afadeed7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkqLiRkACgkQ1ycZbhPLE2B3FQCfR3C3Fc2Mp914r8z1AYMI5VPk
-5HAAnRyxy3MI/gLh0i8OPl/13Dw4+oMH
-=QBph
+iEUEARECAAYFAktQyM4ACgkQ1ycZbhPLE2CN+QCXfAWSdza13G8Zs5sbLGcEeGXN
+IQCePjar2uUY8nlrRwFje9HwvOkLXZM=
+=R8Cc
 -----END PGP SIGNATURE-----
