@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/networkx
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/networkx/ChangeLog,v 1.2 2009/08/19 05:09:38 bicatali Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/networkx/ChangeLog,v 1.3 2010/01/15 19:21:41 bicatali Exp $
+
+*networkx-1.0.1 (15 Jan 2010)
+
+  15 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org>
+  +networkx-1.0.1.ebuild:
+  Version bump
 
   19 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> networkx-0.99.ebuild:
   Added dependendcies for the examples, closing bug #276075
